--- a/PHYS_220BL/lab_8/report.tex
+++ b/PHYS_220BL/lab_8/report.tex
@@ -16,48 +16,54 @@
 \begin{document}
 \maketitle
 \vspace*{-1cm}
-
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{9}{|c|}{\textbf{Table 1: High-Pass Filter}} \\\hline
     \F{f_{gen}}&\F{f_{osc}}&\F{C}&\F{R}&\F{V_{RC}}&\F{V_{R}}&\F{V/DIV~for~V_R}&\F{\left|H_{exp}\right|}&\F{\left|H_{the}\right|}\\\hline
-    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    15kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    20kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    30kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    40kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
+    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    15kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    20kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    30kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    40kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
   \end{tabular}
 \end{table}
-
+\begin{center}
+  \subsection*{High-Pass Filter Setup}
+  % \includegraphics[scale=0.07]{VRC.jpeg}
+  % \subsection*{Setup}
+  % \includegraphics[scale=0.07]{VR.jpeg}
+\end{center}
+% \begin{center}
+%   \subsection*{High-Pass Filter Graph}
+%   % \includegraphics[scale=0.2]{graph1.jpg}
+% \end{center}
+\newpage
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{9}{|c|}{\textbf{Table 2: Low-Pass Filter}} \\\hline
     \F{f_{gen}}&\F{f_{osc}}&\F{C}&\F{R}&\F{V_{RC}}&\F{V_{C}}&\F{V/DIV~for~V_C}&\F{\left|H_{exp}\right|}&\F{\left|H_{the}\right|}\\\hline
-    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    15kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    20kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    30kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
-    40kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & & & & \\\hline
+    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    15kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    20kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    30kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    40kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
   \end{tabular}
 \end{table}
-
 \begin{center}
-  \subsection*{Setup}
+  \subsection*{Low-Pass Filter Setup}
   % \includegraphics[scale=0.07]{VRC.jpeg}
   % \subsection*{Setup}
   % \includegraphics[scale=0.07]{VR.jpeg}
 \end{center}
 
 % \begin{center}
-%   \subsection*{Graph 1}
-%   % \includegraphics[scale=0.2]{graph1.jpg}
-%   \subsection*{Graph 2}
+%   \subsection*{Low-Pass Filter Graph}
 %   % \includegraphics[scale=0.2]{graph2.jpg}
 % \end{center}
 
