--- a/PHYS_220BL/lab_8/report.tex
+++ b/PHYS_220BL/lab_8/report.tex
@@ -20,32 +20,31 @@
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{9}{|c|}{\textbf{Table 1: High-Pass Filter}} \\\hline
     \F{f_{gen}}&\F{f_{osc}}&\F{C}&\F{R}&\F{V_{RC}}&\F{V_{R}}&\F{V/DIV~for~V_R}&\F{\left|H_{exp}\right|}&\F{\left|H_{the}\right|}\\\hline
-    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    15kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    20kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    30kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
-    40kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    10kHz&10.014kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.33V&1V&0.8867&0.9911\\\hline
+    5kHz&5.029kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.17V&1V&0.7800&0.9661\\\hline
+    2kHz&2.052kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.21V&1V&0.8067&0.8365\\\hline
+    1kHz&1.025kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.01V&1V&0.6733&0.6069\\\hline
+    15kHz&15.034kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.37V&1V&0.9133&0.9960\\\hline
+    20kHz&20.029kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.46V&1V&0.9733&0.9978\\\hline
+    30kHz&30.024kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.46V&1V&0.9733&0.9900\\\hline
+    40kHz&40.034kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&1.46V&1V&0.9733&0.9994\\\hline
   \end{tabular}
 \end{table}
 \begin{center}
   \subsection*{High-Pass Filter Setup}
-  % \includegraphics[scale=0.07]{VRC.jpeg}
-  % \subsection*{Setup}
-  % \includegraphics[scale=0.07]{VR.jpeg}
+  \includegraphics[scale=0.065]{Vrc.jpeg}
+  \includegraphics[scale=0.06]{Vr.jpeg}
 \end{center}
-% \begin{center}
-%   \subsection*{High-Pass Filter Graph}
-%   % \includegraphics[scale=0.2]{graph1.jpg}
-% \end{center}
+\begin{center}
+  \subsection*{High-Pass Filter Graph}
+  % \includegraphics[scale=0.2]{graph1.jpg}
+\end{center}
 \newpage
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{9}{|c|}{\textbf{Table 2: Low-Pass Filter}} \\\hline
     \F{f_{gen}}&\F{f_{osc}}&\F{C}&\F{R}&\F{V_{RC}}&\F{V_{C}}&\F{V/DIV~for~V_C}&\F{\left|H_{exp}\right|}&\F{\left|H_{the}\right|}\\\hline
-    10kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
+    10kHz&10.010kHz&0.22\(\mu{F}\)&100\F{\Omega}&1.50V&0.52V&1V&0.3467&0.1328\\\hline
     5kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
     2kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
     1kHz& &0.22\(\mu{F}\)&100\F{\Omega}& & &1V& & \\\hline
@@ -57,9 +56,8 @@
 \end{table}
 \begin{center}
   \subsection*{Low-Pass Filter Setup}
-  % \includegraphics[scale=0.07]{VRC.jpeg}
-  % \subsection*{Setup}
-  % \includegraphics[scale=0.07]{VR.jpeg}
+  \includegraphics[scale=0.06]{Vcr.jpeg}
+  \includegraphics[scale=0.06]{Vc.jpeg}
 \end{center}
 
 % \begin{center}
