--- a/PHYS_220BL/lab_10/report.tex
+++ b/PHYS_220BL/lab_10/report.tex
@@ -22,7 +22,7 @@
   \item Set source to 4V.
   \begin{table}[!htp]\centering
     \begin{tabular}{|c|c|c|c|c|c|c|}\hline
-      \multicolumn{7}{|c|}{\textbf{Table 1: High-Pass Filter}} \\\hline
+      \multicolumn{7}{|c|}{\textbf{Table 1: Earth's Measurement of Magnetic Field}} \\\hline
       Resistance&20\(\Omega \)&40\(\Omega \)&75\(\Omega \)&150\(\Omega \)&180\(\Omega \)&200\(\Omega \)\\\hline
       Current i&0.122A&0.0733A&0.0442A&0.0256A&0.0212A&0.0182A\\\hline
       Dip Angle \F{\Theta_i}&-71\C&-49\C&-14\C&6\C&12\C&15\C\\\hline
@@ -35,10 +35,11 @@
   \item Calculations: (\F{B_i=\frac{8N_{\mu_0}I_i}{R\sqrt{125}},~where~\mu_0=4\pi\times10^{-7}Tm/A},~\(\tan(36\text{\textdegree})=\frac{B_H}{B_V} = 0.727\))
   \begin{itemize}
     \item Plot \F{tan \theta_i} vs \F{B_i} with straight line. Deduce the values of \F{B_V} and \F{B_H} from the graph.
-    \item[] \F{B_V = B_E\cdot cos (\theta_0) \rightarrow\ B_E\cdot cos (36\text{\textdegree})=\boxed{0.809T}}
-    \item[] \F{B_H = B_E\cdot sin (\theta_0) \rightarrow\ B_E\cdot sin (36\text{\textdegree})=\boxed{0.588T}}
-    \item[] Calculate \F{B_E = \frac{B_H}{sin (36\text{\textdegree})} \rightarrow\ \frac{0.588}{sin (36\text{\textdegree})}=\boxed{1.0004T}}
-    \item[] Lookup value of \F{B_E = \frac{3.02e-5}{1.05 -\ 0.727} \rightarrow\ \frac{1}{0.0000935} = \boxed{1.0695\times10^5} }
+    \item \F{B_V = B_E\cdot cos (\theta_0) \rightarrow\ B_E\cdot cos (36\text{\textdegree})=\boxed{0.809T}}
+    \item \F{B_H = B_E\cdot sin (\theta_0) \rightarrow\ B_E\cdot sin (36\text{\textdegree})=\boxed{0.588T}}
+    \item Calculate \F{B_E = \frac{B_H}{sin (36\text{\textdegree})} \rightarrow\ \frac{0.588}{sin (36\text{\textdegree})}=\boxed{1.0004T}}
+    \item Lookup value of \F{B_E = \frac{3.02e-5}{1.05 -\ 0.727} = \boxed{9.34\times10^{-5}T}}
+    \item \F{Slope = \frac{1}{9.34\times10^{-5}T} \rightarrow\ \boxed{1.07\times10^4T}}
   \end{itemize}
 \end{enumerate}
 \begin{center}
