--- a/PHYS_220BL/lab_10/report.tex
+++ b/PHYS_220BL/lab_10/report.tex
@@ -18,7 +18,7 @@
 \maketitle
 \vspace*{-1cm}
 \begin{enumerate}
-  \item Record the initial dip angle \F{\theta_0} = 36\(\text{\textdegree}\)
+  \item Record the initial dip angle \F{\theta_0} = \boxed{36\text{\textdegree}}
   \item Set source to 4V.
   \begin{table}[!htp]\centering
     \begin{tabular}{|c|c|c|c|c|c|c|}\hline
