--- a/PHYS_220BL/lab_10/report.tex
+++ b/PHYS_220BL/lab_10/report.tex
@@ -27,7 +27,7 @@
       Current i&0.122A&0.0733A&0.0442A&0.0256A&0.0212A&0.0182A\\\hline
       Dip Angle \F{\Theta_i}&-71\C&-49\C&-14\C&6\C&12\C&15\C\\\hline
       Calculated \F{B_i}&1.44e-4&8.65e-5&5.22e-5&3.02e-5&2.50e-5&2.15e-5\\\hline
-      \F{tan (\theta_i)}&-2.90&-1.15&-2.49&1.05&2.13&2.68\\\hline
+      \F{tan (\theta_i)}&-2.90&-1.15&-0.25&0.11&0.21&0.27\\\hline
     \end{tabular}
   \end{table}
   \item Record the Helmholtz coil radius: R = 9.75cm \(\rightarrow \boxed{0.0975m}\)
@@ -38,12 +38,12 @@
     \item \F{B_V = B_E\cdot cos (\theta_0) \rightarrow\ B_E\cdot cos (36\text{\textdegree})=\boxed{0.809T}}
     \item \F{B_H = B_E\cdot sin (\theta_0) \rightarrow\ B_E\cdot sin (36\text{\textdegree})=\boxed{0.588T}}
     \item Calculate \F{B_E = \frac{B_H}{sin (36\text{\textdegree})} \rightarrow\ \frac{0.588}{sin (36\text{\textdegree})}=\boxed{1.0004T}}
-    \item Lookup value of \F{B_E = \frac{3.02e-5}{1.05 -\ 0.727} = \boxed{9.34\times10^{-5}T}}
-    \item \F{Slope = \frac{1}{9.34\times10^{-5}T} \rightarrow\ \boxed{1.07\times10^4T}}
+    \item Lookup value of \F{B_E = \frac{3.02e-5}{0.11 -\ 0.727} = \boxed{-4.89\times10^{-5}T}}
+    \item \F{Slope = \frac{1}{-4.89\times10^{-5}T} \rightarrow\ \boxed{-2.04\times10^4T}}
   \end{itemize}
 \end{enumerate}
 \begin{center}
   \subsection*{Graph}
-  \includegraphics[scale=0.25]{graph.jpg}
+  \includegraphics[scale=0.25]{graph.png}
 \end{center}
 \end{document}
