--- a/PHYS_220BL/lab_9/report.tex
+++ b/PHYS_220BL/lab_9/report.tex
@@ -21,11 +21,11 @@
     \multicolumn{11}{|c|}{\textbf{Table 1: Discharge}} \\\hline
     \F{R}&\F{C}&\F{f (Hz)}&\F{V_{min} (V)}&\F{t_{srn} (DIV)}&\F{SEC/DIV}&\F{t_{srn} (s)}&\F{V_{srn} (DIV)}&\F{V/DIV}&\F{V_{srn}}&\F{V_{dischg} (V)}\\\hline
 
-    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&-0.55V& &50us& & &0.2V& & \\\hline
-    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz& & &50us& & &0.2V& & \\\hline
-    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz& & &50us& & &0.2V& & \\\hline
-    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz& & &50us& & &0.2V& & \\\hline
-    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz& & &50us& & &0.2V& & \\\hline
+    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&0.03&\F{\pm}2.3&50us&8.33&\F{\pm}3&0.2V&1.21&1.1767\\\hline
+    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&0.03& &50us& &\F{\pm}3&0.2V& & \\\hline
+    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&0.03& &50us& &\F{\pm}3&0.2V& & \\\hline
+    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&0.03& &50us& &\F{\pm}3&0.2V& & \\\hline
+    \F{100\Omega}&\F{0.22\mu{F}}&4.024kHz&0.03& &50us& &\F{\pm}3&0.2V& & \\\hline
 
     \F{150\Omega}&\F{0.22\mu{F}}& & & &50us& & &0.2V& & \\\hline
     \F{150\Omega}&\F{0.22\mu{F}}& & & &50us& & &0.2V& & \\\hline
