--- a/PHYS_220BL/lab_13/report.tex
+++ b/PHYS_220BL/lab_13/report.tex
@@ -19,10 +19,10 @@
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|}\hline
     \multicolumn{2}{|c|}{\textbf{Table 1: Sizes}}\\\hline
-    Copper wire length l& \\\hline
-    Diameter of pen d& \\\hline
-    Number of windings N& \\\hline
-    Length of the inductor a& \\\hline
+    Copper wire length \F{l}& \\\hline
+    Diameter of pen \F{d}& \\\hline
+    Number of windings \F{N}& \\\hline
+    Length of the inductor \F{a}& \\\hline
   \end{tabular}
 \end{table}
 \begin{table}[!htp]\centering
