--- a/PHYS_220BL/lab_12/report.tex
+++ b/PHYS_220BL/lab_12/report.tex
@@ -28,7 +28,7 @@
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{10}{|c|}{\textbf{Table 2: First Approximation for \F{L}}}\\\hline
     \F{f (Hz)}&s/DIV&\F{V_{RL} (V)}&V/DIV for \F{V_{RL}}&\F{V_{L} (V)}&V/DIV for \F{V_{L}}&\F{I_R (A)}&\F{Z_{L,eff} (\Omega)}&\F{X_L (\Omega)}&L (H)\\\hline
-    65000&0.5ms&0.68V&0.1V&0.01V&0.1V&0.0086&1.163& & \\\hline
+    65000&20us&3.56V&2V&0.08V&2V&&& & \\\hline
   \end{tabular}
 \end{table}
 \begin{table}[!htp]\centering
