--- a/PHYS_220BL/lab_13/report.tex
+++ b/PHYS_220BL/lab_13/report.tex
@@ -30,40 +30,40 @@
   \begin{tabular}{|c|c|c|c|c|c|c|}\hline
     \multicolumn{7}{|c|}{\textbf{Table 2: First Approximation for \F{R_{int}}}}\\\hline
     \F{f (Hz)}&s/DIV&\F{V_{RL} (V)}&V/DIV for \F{V_{RL}}&\F{V_{L} (V)}&V/DIV for \F{V_{L}}&\F{R_{int} (\Omega)}\\\hline
-    1000&0.5ms&3.56V&0.5V&0.05V&0.5V&1.42\\\hline
+    1000&0.5ms&2.98V&0.5V&0.04V&0.5V&1.36\\\hline
   \end{tabular}
 \end{table}
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}\hline
     \multicolumn{10}{|c|}{\textbf{Table 2: First Approximation for \F{L}}}\\\hline
     \F{f (Hz)}&s/DIV&\F{V_{RL} (V)}&V/DIV for \F{V_{RL}}&\F{V_{L} (V)}&V/DIV for \F{V_{L}}&\F{I_R (A)}&\F{Z_{L,eff} (\Omega)}&\F{X_L (\Omega)}&L (H)\\\hline
-    65000&0.2ms&3.28V&0.5V&0.10V&0.5V&0.033&3.05&0.771&1.89e-6\\\hline
+    65000&20us&3.02V&0.5V&0.06V&0.5V&0.030&1.99&0.402&9.84e-7\\\hline
   \end{tabular}
 \end{table}
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|c|c|}\hline
     \multicolumn{6}{|c|}{\textbf{Table 3: The Impedance of an Inductor}}\\\hline
     \F{f (Hz)}&s/DIV&\F{V_{RL} (V)}&V/DIV for \F{V_{RL}}&\F{V_{L} (V)}&V/DIV for \F{V_{L}}\\\hline
-    1000&0.5ms&3.56V&0.5V&0.05V&0.5V\\\hline
-    22000&0.5ms&3.56V&0.5V&0.06V&0.5V\\\hline
-    32000&0.5ms&3.46V&0.5V&0.08V&0.5V\\\hline
-    39000&0.5ms&3.42V&0.5V&0.08V&0.5V\\\hline
-    45000&0.5ms&3.38V&0.5V&0.08V&0.5V\\\hline
-    50000&0.2ms&3.36V&0.5V&0.09V&0.5V\\\hline
-    55000&0.2ms&3.32V&0.5V&0.09V&0.5V\\\hline
-    60000&0.2ms&3.30V&0.5V&0.10V&0.5V\\\hline
-    65000&0.2ms&3.28V&0.5V&0.10V&0.5V\\\hline
+    1000&0.5ms&2.98V&0.5V&0.04V&0.5V\\\hline
+    22000&20us&3.04V&0.5V&0.04V&0.5V\\\hline
+    32000&20us&3.02V&0.5V&0.04V&0.5V\\\hline
+    39000&20us&3.04V&0.5V&0.04V&0.5V\\\hline
+    45000&20us&3.00V&0.5V&0.06V&0.5V\\\hline
+    50000&20us&2.98V&0.5V&0.06V&0.5V\\\hline
+    55000&20us&3.02V&0.5V&0.06V&0.5V\\\hline
+    60000&20us&3.02V&0.5V&0.06V&0.5V\\\hline
+    65000&20us&3.02V&0.5V&0.06V&0.5V\\\hline
   \end{tabular}
 \end{table}
 \begin{center}
   \subsection*{SETUP}
   \begin{figure}[!htp]
     \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.061]{V_RL.jpeg}
+    \includegraphics[scale=0.066]{V_RL.jpeg}
     \caption*{\F{V_{RL}}}\label{fig:subim1}
     \end{subfigure}
     \begin{subfigure}{0.5\textwidth}
-    \includegraphics[scale=0.061]{V_L.jpeg}
+    \includegraphics[scale=0.066]{V_L.jpeg}
     \caption*{\F{V_{L}}}\label{fig:subim2}
     \end{subfigure}
   \end{figure}
