--- a/PHYS_220BL/lab_11/report.tex
+++ b/PHYS_220BL/lab_11/report.tex
@@ -17,34 +17,23 @@
 \maketitle
 \vspace*{-1cm}
 \begin{table}[!htp]\centering
-  \begin{tabular}{|c|c|c|c|c|}\hline
-    \multicolumn{5}{|c|}{\textbf{Table 1: Baseline Measurement}}\\\hline
-    Point Near Anode&\F{x_1=?}&?&\F{y_1=?}&?\\\hline
-    Point Near 10cm&\F{x_2=?}&?&\F{y_2=?}&?\\\hline
-    Fit to \F{y=ax+b}&\F{a=?}&?&\F{b=?}&?\\\hline
-  \end{tabular}
-\end{table}
-\begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|}\hline
     \multicolumn{4}{|c|}{\textbf{Table 2: Electron Deflection}}\\\hline
-    \F{x_{obs}}&\F{y_{obs}} (two values for two polarity method)&\F{y_{baseline}}&\F{y=y_{obs}-y_{baseline}}\\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
-    & & & \\\hline
+    \F{X_{obs}}&\F{Y_{obs}}&Y&\F{F_D}\\\hline
+    8.3&-2.40, 2.35&2.38&-0.03\\\hline
+    8.0&-2.20, 2.05&2.13&-0.08\\\hline
+    7.3&-2.10, 1.45&1.78&-0.33\\\hline
+    7.0&-1.40, 1.35&1.38&-0.03\\\hline
+    6.3&-1.30, 1.25&1.28&-0.03\\\hline
+    6.0&-1.20, 1.15&1.18&-0.03\\\hline
+    5.3&-1.10, 1.10&1.10&0.00\\\hline
+    5.0&-0.50, 1.00&0.75&0.25\\\hline
+    4.3&-0.40, 0.50&0.45&0.05\\\hline
+    4.0&-0.30, 0.30&0.30&0.00\\\hline
   \end{tabular}
 \end{table}
 \begin{itemize}
-  \item[(a)] Measure the distance between the plates s =?
-  \item[] a
+  \item[(a)] Measure the distance between the plates s = \F{\boxed{5.3~cm}}
   \item[(b)] Graph \F{y~vs.~x^2}, include error bars. Measure the slope of the graph, slope =?
   \item[] b
   \item[(c)] From the slope, calculate the correction factor \F{F_D=?}
@@ -55,27 +44,14 @@
   \begin{tabular}{|c|c|c|c|c|}\hline
     \multicolumn{5}{|c|}{\textbf{Table 3: Thompson's Experiment}}\\\hline
     \F{V_{PS} (kV)}&2.00&2.50&3.00&3.50\\\hline
-    \F{I} (A)& & & & \\\hline
-    \F{B} (T)& & & & \\\hline
+    \F{I} (A)&0.18&0.23&0.28&0.33\\\hline
+    \F{B} (T)&7.62e-4&9.73e-4&0.12e-2&0.14e-2\\\hline
     \F{e/m} (C/kg)& & & & \\\hline
   \end{tabular}
 \end{table}
 Sketch the path of the beam:\\
 \fbox{\begin{minipage}{53em}
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}\\
-\text{}
+  \includegraphics[width=\textwidth]{beam.jpeg}
 \end{minipage}}
 \subsection*{11.6 Questions}
 \begin{enumerate}
