--- a/PHYS_220BL/lab_13/report.tex
+++ b/PHYS_220BL/lab_13/report.tex
@@ -71,6 +71,19 @@
   \includegraphics[width=\textwidth]{graph.jpg}
 \end{center}
 \begin{itemize}
-  \item Compare the obtained value to that predicted for an ideal long inductor made of a wire of length l and taking up length a along the toothpick, \F{L=\frac{l^2}{a}\times{10}^{-7}H\rightarrow~L=\frac{.512 m}{.011 m}\times{10}^{-7}H\rightarrow~L=4.65\times{10}^{-7}H}
+  \item Compare the obtained value to that predicted for an ideal long inductor made of a wire of length l and taking up length a along the toothpick, \F{L=\frac{l^2}{a}\times{10}^{-7}H\rightarrow~L=\frac{.512 m}{.011 m}\times{10}^{-7}H}
+  \item \F{L=\boxed{4.65\times{10}^{-7}H}}
+  \item \F{Slope = \boxed{2.1\times{10}^{- 7}}}
 \end{itemize}
+\begin{align*}
+  R_{int} &= R/((V_{RL}/V_{L}) - 1)\\
+  I_R &= V_{RL} / R\\
+  Z_L &= V_L / I_R\\
+  X_L &= \sqrt{ Z_L^2 - R_{int}^2}\\
+  L &= X_L / (2 * pi * Hz)\\
+  R &= 100\\
+  Hz &= 1000,22000,32000,39000,45000,50000,55000,60000,65000\\
+  R_{int} &= 1.36, 1.33, 1.34, 1.32, 2.04, 2.05, 2.03, 2.03, 2.03\\
+  L &= 1.56\times{10}^{-6},1.56\times{10}^{-6},1.08\times{10}^{-6},8.80\times{10}^{-7},1.44\times{10}^{-6},1.31\times{10}^{-6},1.16\times{10}^{-6},1.07\times{10}^{-6},9.84\times{10}^{-7}\\
+\end{align*}
 \end{document}
